Fixed bug where some images load onto restaurant block with wrong width

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -65,7 +65,8 @@ body {
 .chosen-thumbnail>img {
 	border-radius: 100px 100px 100px 100px;
 	box-shadow: 0px 0px 10px 5px #e5a84f;
-	height:200px
+	height:200px;
+	width:200px;
 }
 .chosen-info a {
 	color: #444444;
